completed coin project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <main>
         <H1>Penny Flip Game</H1>
         <div>
-            <div>Penny Image Display, Button Controls, and Status Message</div>
+            <div class="image-container">
+                <img id="penny-img" src="./assets/images/penny-heads.jpg" alt="penny image"></img>
+            </div>
+            <br>
+            <div class="controls">
+                <button id="flip-penny">Flip the Penny!</button>
+                <button id="clear-score">Clear Scoreboard</button>
+            </div>
+        </div>
+        <div class="message-container">
+            <h3 id="status-message">Let's Get Flipping</h3>
+        </div>
             <hr>
             <div>
                 <h2>Scoreboard</h2>
